# FHTW-OOP

./: .gitignore
Eigenstudium/ES-K/Repository Pattern/: Bot.cpp  Bot.h  BotFactory.cpp  BotFactory.h  CMakeLists.txt  ProtocolDroid.cpp  ProtocolDroid.h  Terminator.cpp  Terminator.h  main.cpp
Eigenstudium/ES-S/Rule of 3-5-0/: CMakeLists.txt  School.cpp  School.h  Student.cpp  Student.h  main.cpp
